# Lazy_Boy_Diary

./: .spacemacs  README.md  markdown.md  orgmode.org  refers.md  spacemacs  tristian.json
C/: bg_to_fg.c  bgfg.c  echo_argv_env.c  exec.c  fork_execve.c  func_ptr.c  gen_random.c  mmap_demo.cpp  mmap_shared_mm.c  mmap_test.cpp  multi_funcptr.c  new_hello.cpp  parsearg.c  printf_format.md  second_level_pointer.c  shared_memory_test.c  vir_2_phy.c
C++/: cast.cpp  note.md  read_file.cpp
C/box/: CMakeLists.txt
C/box/archive/: addvec.c  mulvec.c
C/box/include/: common.h
C/box/src/: a.out
C/box/testsys/: bg_to_fg.c  kill.c  pause.c  restart.c  signal.c  test.c  wait.c
C/box/tmp/: ques.md  tsh.c
SOLUTIONS/: common.h  tags  utils.scm
SOLUTIONS/DP/: cut-rod.py
SOLUTIONS/LCS/: lcs-v2.scm  lcs.py  lcs.scm
SOLUTIONS/activity-selector/: activity-selector.py
SOLUTIONS/aplusb/: a.out  aplusb.cpp
SOLUTIONS/cut-rod/: cut-rod.scm  tags
SOLUTIONS/fib-memo/: memo-fib.scm
SOLUTIONS/matrix-chain-multiplication/: matrix-chain-multiplication.py  test.scm
apue/: rd_wr_lock.c
arch_linux/: installing.md  intro.md
awk/: awk_test  one-lines  select_win_lose
clojure/: fast_exercise.clj  hello.clj  learn_clojure.clj
cmake/: CMakeLists.txt.example
cmake/VideoTest/: CMakeLists.txt
cmake/VideoTest/include/: npddetect.h  npdmodel.h
cmake/VideoTest/lib/: CMakeLists.txt
cmake/VideoTest/lib/tmp/: npddetect.cpp  npddetect.h
cmake/VideoTest/res/: .gitignore
cmake/VideoTest/src/detection/: detection_track.cpp  npddetect.cpp
cmake/VideoTest/src/multiTrack/: detection_multitrack.cpp  npddetect.cpp  npddetect.h  npdmodel.cpp
cmake/VideoTest/src/track/: detection_track.cpp  npddetect.cpp
cmake/VideoTest/test/detection/: detection
cmake/VideoTest/test/detection_bs_multitrack/: videoTest
cmake/VideoTest/test/detection_bs_track/: videoTest
cmake/VideoTest/test/detection_multitrack/: videoTest
cmake/VideoTest/test/detection_track/: videoTest
cmake/bs/: CMakeLists.txt
cmake/bs/src/: bs.cpp
cmake/example_opencv/: a.out  intersection.cpp
cmake/example_opencv/g_opencv/: Detector.h  Makefile  a.out  draw.cpp  g++_opencv  rotate.cpp
cmake/example_opencv/tmp/: a  extractNeg.cpp  g++_opencv  index.cpp  test.cpp  test_gigi
cmake/extra/studentlib_static/: CMakeLists.txt
cmake/multiTrack/: CMakeLists.txt
cmake/multiTrack/res/: track.py
cmake/multiTrack/src/: multiTrack.cpp
cmake/track/: CMakeLists.txt
cmake/track/src/: track.cpp
cross_compilation_android/: command64
cross_compilation_android/auto_compile/: CMakeLists.txt
cross_compilation_android/auto_compile/old/: CMakeLists.txt
cross_compilation_android/local_c++_test/: CMakeLists.txt
cross_compilation_android/local_c++_test/src/: main.cpp
cross_compilation_android/local_c++_test/src/tmp/: prepare.cpp
cross_compilation_android/npd_3000fps_cross_compile/: CMakeLists.txt
cross_compilation_android/npd_3000fps_cross_compile/com/zjgsu/face/: SWIGTYPE_p_signed_char.java  detectJNI.java  npddetect.java
cross_compilation_android/npd_3000fps_cross_compile/jni/: detect.i  detect_wrap.cxx  lbf.hpp  npddetect.cpp  npddetect.h  rf.cpp  rf.hpp
cross_compilation_android/npd_3000fps_cross_compile/tmp/: CMakeLists.txt
cross_compilation_android/test_java/: CMakeLists.txt  command  runme.java
cross_compilation_android/test_java/com/zjgsu/face/: SWIGTYPE_p_lbf__LbfCascador.java  detectJNI.java  npddetect.java
cross_compilation_android/test_java/jni/: common.cpp  common.hpp  detect_wrap.cxx  lbf.cpp  npddetect.cpp  npddetect.h
cross_compilation_android/test_python/: CMakeLists.txt
cross_compilation_android/test_python/jni/: detect.i  detect_wrap.cxx  npddetect.cpp  npddetect.h
cross_compilation_android/test_python/lib/: detect.py
csapp/12_chap_parallel/: test.c
dh_chat/: README.md
dh_chat/src/: common.h  rio.cpp  server.cpp  utils.cpp  utils.h
dh_chat/test/: client.cpp  common.h
emacs/: note.md
gdb/: command.md
git/: command_git.md  progit.md
git/linux/: ip_cmd.md
lisp/: note.md  paul_cl.lisp  test.cl
make/: 1_makefile  2_makefile  3_makefile
misc/: QUES.org  deploy_caffe_cpu_only.md  ques.md  step_training_ssd.md  train_annot_with_bg_class.txt
model/done/: V_H  X  debug_model.py  final.py  foo.py  game_result  hw  ideal_csv  log  logistic  model.py  prediction.py  result17_18  svm  train.py  train_data  y
node_js/: node_test.js
perl/: sub.pl  testpl.pl
python/: check_and_save.py  check_diff.py  check_image_exist.py  create_label.py  data_process.py  date_time.py  db.json  deep_copy_list.py  draw.py  easy_pickle_use.py  filter_BACKUP_4252.py  filter_BASE_4252.py  filter_LOCAL_4252.py  filter_REMOTE_4252.py  functional_py.py  gen_car.py  genpairlist.py  gt_or_eq.json  innerfunc.py  iter_dicts.py  kick_single.py  matching_result.csv  model_process_data.py  mul_test_id.py  new.txt  primitives.py  print_function_format.py  read_file.py  resize_images_and_glob_usage.py  result  solu.py  test_pandas_merge.py  textToXml.py  the_other.json  tmp.py  verification.py  voc_label.py  yue.py
python/demo/: README.md  db.json  gt_or_eq.json  h  matching_result.csv  the_other.json  yue.py
ruby/: learn_rb.rb
ruby/Metaprogramming/: Monday.rb  meta_programming.rb
scheme/: exer.scm  generic.scm  scm.scm  sicp.scm  test.scm
scheme/2Chap/: deriv.scm  digital_pack.scm  huffman.scm  ordered_sets.scm  sets.scm  sicp.scm  test.scm  tree.scm
scheme/3Chap/: Queue.scm  global-2-dim-table.scm  local-2-dim-table.scm  memo-fib.scm  mutation-assignment.scm  physical-curcuit.scm  queue.scm
shell/: cmd_find.md  convert.sh  create_data.sh  create_list.sh  exc.sh  learn_shell_scripht.sh  learn_shell_script.sh  log.190625  need_to_know  sicp.scm  test.sh
swig/Python3.5/: README.md
swig/src/: detect.i  npddetect.cpp
swig/test_python/: CMakeLists.txt
swig/test_python/include/: npddetect.h
swig/test_python/src/: detect_wrap.cxx
the_fucking_VOC_format/: VOC2007xml.m  gen_txt.m  ssd_cheguo.py  ssd_cheguo_webcam.py
tools/: gnu_tools.md
vim/: command.md
web/: flask.py
(+65 files in other folders)
